--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BTC/USDT Price Dashboard - Mobile Responsive</title>
+  <title>Weather-Widget-V2</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
@@ -98,11 +98,11 @@
     .date {
       font-size: 1.2em;
       color: #ccc;
-      margin-bottom: 6px;
+      margin-bottom: 2px;
     }
     .weather {
-      font-size: 3em;
-      margin-top: 10px;
+      font-size: 2.8em;
+      margin-top: 2px;
       text-align: center;
       line-height: 1.4;
       white-space: pre-line;
