--- a/index.html
+++ b/index.html
@@ -332,38 +332,50 @@
 
         let priceData = loadStoredData();
 
-        const chart = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: priceData.map(d => new Date(d.timestamp).toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })),
-                datasets: [{
-                    label: 'BTC/USDT Price',
-                    data: priceData.map(d => d.price),
-                    borderColor: '#ff9800',
-                    backgroundColor: 'rgba(255, 152, 0, 0.3)',
-                    tension: 0.2,
-                    fill: true,
-                    pointRadius: 0,
-                    borderWidth: 2,
-                }]
-            },
-            options: {
-                scales: {
-                    x: {
-                        ticks: { color: '#fff', font: { weight: '700' } },
-                        grid: { color: '#333' }
-                    },
-                    y: {
-                        ticks: { color: '#fff', font: { weight: '700' } },
-                        grid: { color: '#333' }
-                    }
+        const now = Date.now();
+            const twentyFourHoursAgo = now - (24 * 60 * 60 * 1000);
+            
+            const chart = new Chart(ctx, {
+                type: 'line',
+                data: {
+                    labels: priceData.map(d => new Date(d.timestamp)),
+                    datasets: [{
+                        label: 'BTC/USDT Price',
+                        data: priceData.map(d => ({ x: new Date(d.timestamp), y: d.price })),
+                        borderColor: '#ff9800',
+                        backgroundColor: 'rgba(255, 152, 0, 0.3)',
+                        tension: 0.2,
+                        fill: true,
+                        pointRadius: 0,
+                        borderWidth: 2,
+                    }]
                 },
-                animation: false,
-                responsive: true,
-                maintainAspectRatio: false,
-                plugins: { legend: { display: false } }
-            }
-        });
+                options: {
+                    scales: {
+                        x: {
+                            type: 'time',
+                            time: {
+                                unit: 'hour',
+                                displayFormats: { hour: 'HH:mm' }
+                            },
+                            min: twentyFourHoursAgo,
+                            max: now,
+                            ticks: { color: '#fff', font: { weight: '700' } },
+                            grid: { color: '#333' }
+                        },
+                        y: {
+                            ticks: { color: '#fff', font: { weight: '700' } },
+                            grid: { color: '#333' }
+                        }
+                    },
+                    animation: false,
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    plugins: {
+                        legend: { display: false }
+                    }
+                }
+            });
 
         async function setRandomCatGif() {
             try {
